<resources>
    <string name="app_name">MiniMoneybox</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="retry">Retry</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_full_name">Full Name (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="email_address_error">Please enter a correct email address</string>
    <string name="password_error">Please enter a correct password</string>
    <string name="full_name_error">Please enter your full name</string>
    <string name="input_valid">Input is valid!</string>
    <string name="login_error">Error logging in.</string>

    <string name="loading_error">There was an error fetching data.</string>

    <string name="add_error">An error occurred please try again.</string>

    <string name="QUICK_ADD_10">+£10</string>
    <string name="stocks_shares_isa">Stocks $ Shares ISA</string>
    <string name="_20000">$20000</string>
    <string name="quick_add">Quick Add</string>
    <string name="_6_days_until_collection">6 days until collection</string>
    <string name="saved">Saved</string>
    <string name="_10_71">$10.71</string>
    <string name="this_week">this week</string>
    <string name="_10_87">$10.87</string>
    <string name="total_value">Total Value</string>
    <string name="investments">Investments</string>
    <string name="your_accounts">Your accounts</string>
    <string name="lifetime_isa">Lifetime ISA</string>
    <string name="_13_77">+13.77%</string>
    <string name="_407_75">+407.75</string>
    <string name="total_earnings">Total Earnings</string>
    <string name="_3_368_75">$3,368.75</string>
    <string name="plan_value">Plan Value:</string>
    <string name="_1_164_63">$1,164.63</string>
    <string name="moneybox">Moneybox: </string>
    <string name="_20">$20</string>
</resources>
