<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.minimoneybox.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".view.LoginActivity">

        <ImageView
                android:id="@+id/img_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:src="@drawable/moneybox_logo"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                app:layout_constraintTop_toBottomOf="@+id/img_logo"
                android:layout_marginTop="32dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:errorMessage="@{viewModel.emailErrorMessage}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:onTextChanged="@{(text, start, before, count) -> viewModel.onEmailChange(text)}"
                    android:maxLines="1"
                    android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:errorMessage="@{viewModel.passwordErrorMessage}"
                app:layout_constraintTop_toBottomOf="@+id/til_email">

            <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:inputType="textPassword"
                    android:onTextChanged="@{(text, start, before, count) -> viewModel.onPasswordChange(text)}"
                    android:maxLines="1"
                    android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:errorMessage="@{viewModel.nameErrorMessage}"
                app:layout_constraintTop_toBottomOf="@+id/til_password">

            <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_full_name"
                    android:inputType="textPersonName"
                    android:onTextChanged="@{(text, start, before, count) -> viewModel.onNameChange(text)}"
                    android:maxLines="1"
                    android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/btn_sign_in"
                style="@style/Widget.Button.Colored.Rounded"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/til_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:onClick="@{() -> viewModel.login()}"
                android:text="@string/action_sign_in"
                android:textStyle="bold"/>

        <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitEnd"
                app:lottie_fileName="pig.json"
                app:animate="@{true}"
                app:layout_constraintBottom_toTopOf="@id/btn_sign_in"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>